// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auditWidget tid-0: handles no results 1`] = `
"
<div id=\\"widget\\" class=\\"widget\\" style=\\"color:#000000;\\">
  <h2 class=\\"title\\">TRUNK</h2>
  <div class=\\"big-count truncated-text-ellipsis\\">N/A</div>
  <div class=\\"footer truncated-text-ellipsis\\">no audit_results</div>
  <div class=\\"footer truncated-text-ellipsis\\">
    <a style=\\"color:#000000;\\" href=\\"https://docs.npmjs.com/getting-started/running-a-security-audit\\">npm audit</a> results
  </div>
</div>"
`;

exports[`auditWidget tid-1: handles moderate render 1`] = `
"
<div id=\\"widget\\" class=\\"widget\\" style=\\"color:#ffffff;background-color:#F08700;\\">
  <h2 class=\\"title\\">TRUNK</h2>
  <div class=\\"big-count truncated-text-ellipsis\\">10</div>
  <div class=\\"footer truncated-text-ellipsis\\"> c: 0,  h: 0,  m: 10,  l: 0</div>
  <div class=\\"footer truncated-text-ellipsis\\">
    <a style=\\"color:#ffffff;\\" href=\\"https://docs.npmjs.com/getting-started/running-a-security-audit\\">npm audit</a> results
  </div>
</div>"
`;

exports[`auditWidget tid-2: handles critical render 1`] = `
"
<div id=\\"widget\\" class=\\"widget\\" style=\\"color:#ffffff;background-color:#DA0A00;\\">
  <h2 class=\\"title\\">TRUNK</h2>
  <div class=\\"big-count truncated-text-ellipsis\\">15</div>
  <div class=\\"footer truncated-text-ellipsis\\"> c: 1,  h: 4,  m: 10,  l: 0</div>
  <div class=\\"footer truncated-text-ellipsis\\">
    <a style=\\"color:#ffffff;\\" href=\\"https://docs.npmjs.com/getting-started/running-a-security-audit\\">npm audit</a> results
  </div>
</div>"
`;

exports[`auditWidget tid-3: handles high render 1`] = `
"
<div id=\\"widget\\" class=\\"widget\\" style=\\"color:#ffffff;background-color:#FF6201;\\">
  <h2 class=\\"title\\">TRUNK</h2>
  <div class=\\"big-count truncated-text-ellipsis\\">11</div>
  <div class=\\"footer truncated-text-ellipsis\\"> c: 0,  h: 1,  m: 10,  l: 0</div>
  <div class=\\"footer truncated-text-ellipsis\\">
    <a style=\\"color:#ffffff;\\" href=\\"https://docs.npmjs.com/getting-started/running-a-security-audit\\">npm audit</a> results
  </div>
</div>"
`;

exports[`auditWidget tid-4: handles low render 1`] = `
"
<div id=\\"widget\\" class=\\"widget\\" style=\\"color:#000;background-color:#F8A800;\\">
  <h2 class=\\"title\\">TRUNK</h2>
  <div class=\\"big-count truncated-text-ellipsis\\">1</div>
  <div class=\\"footer truncated-text-ellipsis\\"> c: 0,  h: 0,  m: 0,  l: 1</div>
  <div class=\\"footer truncated-text-ellipsis\\">
    <a style=\\"color:#000;\\" href=\\"https://docs.npmjs.com/getting-started/running-a-security-audit\\">npm audit</a> results
  </div>
</div>"
`;

exports[`auditWidget tid-5: handles ok render 1`] = `
"
<div id=\\"widget\\" class=\\"widget\\" style=\\"color:#ffffff;background-color:#107C10;\\">
  <h2 class=\\"title\\">TRUNK</h2>
  <div class=\\"big-count truncated-text-ellipsis\\">0</div>
  <div class=\\"footer truncated-text-ellipsis\\"> c: 0,  h: 0,  m: 0,  l: 0</div>
  <div class=\\"footer truncated-text-ellipsis\\">
    <a style=\\"color:#ffffff;\\" href=\\"https://docs.npmjs.com/getting-started/running-a-security-audit\\">npm audit</a> results
  </div>
</div>"
`;

exports[`auditWidget tid-6: handles no builds 1`] = `
"
<div id=\\"widget\\" class=\\"widget\\" style=\\"color:#000000;\\">
  <h2 class=\\"title\\">null</h2>
  <div class=\\"big-count truncated-text-ellipsis\\">N/A</div>
  <div class=\\"footer truncated-text-ellipsis\\">no audit_results</div>
  <div class=\\"footer truncated-text-ellipsis\\">
    <a style=\\"color:#000000;\\" href=\\"https://docs.npmjs.com/getting-started/running-a-security-audit\\">npm audit</a> results
  </div>
</div>"
`;

exports[`auditWidget tid-7: handles no settings 1`] = `
"<div id=\\"widget\\" class=\\"widget\\">
    <h2 class=\\"title\\">npm audit widget</h2>
    <div class=\\"big-count truncated-text-ellipsis\\">N/A</div>
    <div class=\\"footer truncated-text-ellipsis\\">not configured</div>
  </div>"
`;

exports[`auditWidget tid-8: handles reload 1`] = `
"
<div id=\\"widget\\" class=\\"widget\\" style=\\"color:#ffffff;background-color:#107C10;\\">
  <h2 class=\\"title\\">TRUNK</h2>
  <div class=\\"big-count truncated-text-ellipsis\\">0</div>
  <div class=\\"footer truncated-text-ellipsis\\"> c: 0,  h: 0,  m: 0,  l: 0</div>
  <div class=\\"footer truncated-text-ellipsis\\">
    <a style=\\"color:#ffffff;\\" href=\\"https://docs.npmjs.com/getting-started/running-a-security-audit\\">npm audit</a> results
  </div>
</div>"
`;

exports[`auditWidget tid-8: handles reload 2`] = `
"
<div id=\\"widget\\" class=\\"widget\\" style=\\"color:#ffffff;background-color:#107C10;\\">
  <h2 class=\\"title\\">TRUNK2</h2>
  <div class=\\"big-count truncated-text-ellipsis\\">0</div>
  <div class=\\"footer truncated-text-ellipsis\\"> c: 0,  h: 0,  m: 0,  l: 0</div>
  <div class=\\"footer truncated-text-ellipsis\\">
    <a style=\\"color:#ffffff;\\" href=\\"https://docs.npmjs.com/getting-started/running-a-security-audit\\">npm audit</a> results
  </div>
</div>"
`;
